logs/nis_startup_20250521_131711.log
INFO:     Will watch for changes in these directories: ['/Users/diegofuego/Desktop/openai-to-z-nis']
INFO:     Uvicorn running on http://0.0.0.0:8001 (Press CTRL+C to quit)
INFO:     Started reloader process [93412] using StatReload
Starting NIS Protocol API server on 0.0.0.0:8001
2025-05-21 13:18:45,319 - src.meta.coordinator - INFO - MetaProtocolCoordinator initialized
2025-05-21 13:18:46,391 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions "HTTP/1.1 200 OK"
2025-05-21 13:18:46,772 - src.agents.vision_agent - INFO - Vision Agent initialized with GPTIntegration (gpt-4-turbo)
2025-05-21 13:18:46,773 - src.agents.reasoning_agent - INFO - Loaded reasoning prompt from src/prompts/reasoning_prompt.txt
2025-05-21 13:18:47,352 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions "HTTP/1.1 200 OK"
2025-05-21 13:18:47,352 - src.agents.reasoning_agent - INFO - Initialized GPT integration with model: gpt-4-turbo
2025-05-21 13:18:47,353 - src.agents.reasoning_agent - INFO - Reasoning Agent initialized
2025-05-21 13:18:48,001 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions "HTTP/1.1 200 OK"
2025-05-21 13:18:48,002 - src.agents.memory_agent - INFO - Initialized GPT integration for Memory Agent with model: gpt-4o
2025-05-21 13:18:48,034 - src.infrastructure.redis_client - INFO - Connected to Redis at localhost:6379
2025-05-21 13:18:48,086 - src.agents.memory_agent - INFO - Initialized Redis for Memory Agent caching
2025-05-21 13:18:48,288 - src.infrastructure.kafka_client - INFO - Kafka producer initialized for 127.0.0.1:9092
2025-05-21 13:18:48,289 - src.agents.memory_agent - INFO - Initialized Kafka for Memory Agent events
2025-05-21 13:18:48,289 - src.agents.memory_agent - INFO - Memory Agent initialized with storage at outputs/memory
2025-05-21 13:18:48,289 - src.agents.action_agent - INFO - Action Agent initialized with output dir at outputs/findings
/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.
  warnings.warn(
Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration. Please open a PR/issue to update `preprocessor_config.json` to use `image_processor_type` instead of `feature_extractor_type`. This warning will be removed in v4.40.
Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']
You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.
/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/transformers/pipelines/text_classification.py:104: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.
  warnings.warn(
2025-05-21 13:18:52,443 - src.data_processing.indigenous_maps - WARNING - Could not load reference features: [Errno 2] No such file or directory: 'data/indigenous_maps/reference_features.json'
2025-05-21 13:18:52,692 - src.data_processing.indigenous_maps - WARNING - Could not load known locations: data/indigenous_maps/known_locations.geojson: No such file or directory
/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.
  warnings.warn(
Some weights of the model checkpoint at dslim/bert-base-NER were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']
- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).
- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).
2025-05-21 13:18:58,739 - src.data_processing.historical_texts - WARNING - Could not load historical places database: [Errno 2] No such file or directory: 'data/historical_texts/historical_places.csv'
2025-05-21 13:18:59,676 - src.meta.coordinator - INFO - Registered protocol adapter: mcp
2025-05-21 13:19:00,924 - src.meta.coordinator - INFO - Registered protocol adapter: acp
2025-05-21 13:19:00,988 - src.meta.coordinator - INFO - Registered protocol adapter: a2a
2025-05-21 13:19:00,988 - src.meta.coordinator - INFO - Registered agent: vision_agent
2025-05-21 13:19:00,988 - src.meta.coordinator - INFO - Registered agent: reasoning_agent
2025-05-21 13:19:00,988 - src.meta.coordinator - INFO - Registered agent: memory_agent
2025-05-21 13:19:00,988 - src.meta.coordinator - INFO - Registered agent: action_agent
2025-05-21 13:19:00,989 - api.agent_integrator - INFO - NIS Protocol agents and coordinator initialized successfully
Process SpawnProcess-1:
Traceback (most recent call last):
  File "/Users/diegofuego/.pyenv/versions/3.10.6/lib/python3.10/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/Users/diegofuego/.pyenv/versions/3.10.6/lib/python3.10/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/uvicorn/_subprocess.py", line 76, in subprocess_started
    target(sockets=sockets)
  File "/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/uvicorn/server.py", line 61, in run
    return asyncio.run(self.serve(sockets=sockets))
  File "/Users/diegofuego/.pyenv/versions/3.10.6/lib/python3.10/asyncio/runners.py", line 44, in run
    return loop.run_until_complete(main)
  File "/Users/diegofuego/.pyenv/versions/3.10.6/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/uvicorn/server.py", line 68, in serve
    config.load()
  File "/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/uvicorn/config.py", line 473, in load
    self.loaded_app = import_from_string(self.app)
  File "/Users/diegofuego/Desktop/openai-to-z-nis/venv/lib/python3.10/site-packages/uvicorn/importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "/Users/diegofuego/.pyenv/versions/3.10.6/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/diegofuego/Desktop/openai-to-z-nis/api/main.py", line 25, in <module>
    from .batch import app as batch_app
  File "/Users/diegofuego/Desktop/openai-to-z-nis/api/batch.py", line 8, in <module>
    from src.data_processing.pipeline import AnalysisPipeline
  File "/Users/diegofuego/Desktop/openai-to-z-nis/src/data_processing/pipeline.py", line 583
    else: # Correctly paired with the 'if'
    ^^^^
SyntaxError: invalid syntax
